Fix student detail mobile layout
Changed width of class description div in mobile layout to accomodate course site description

Score bar values scaled to 90% to fit text percentage within the box

--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -404,6 +404,11 @@ th[scope="row"] {
         display: inline-block;
     }
 }
+.class-site {
+    @include mobile {
+        width: 75%;
+    }
+}
 .hide-small-grid {
     @include mobile {
         display: none;
@@ -549,7 +554,7 @@ a.class-site-status-link {
 }
 .average-bar {
     -webkit-box-shadow: none;
-    max-width: 100%;
+    max-width: 90%;
     box-shadow: none;
     float: left;
     font-size: 12px;
