--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -536,6 +536,12 @@ th[scope="row"] {
 }
 
 @media screen and (max-width: 992px) {
+  .class-site {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 992px) {
   .hide-small-grid {
     display: none;
   }
@@ -707,7 +713,7 @@ a.class-site-status-link span {
 
 .average-bar {
   -webkit-box-shadow: none;
-  max-width: 100%;
+  max-width: 90%;
   box-shadow: none;
   float: left;
   font-size: 12px;
