Fix display of left menu in student class site detail page
Add a 'margin-bottom' to left menu div to accommodate all courses

--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -510,6 +510,10 @@ th[scope="row"] {
   }
 }
 
+.student-detail-left-menu-detail {
+  margin-bottom: 100px;
+}
+
 @media screen and (max-width: 992px) {
   .table-responsive {
     border: none;
