Prevent mobile page from zooming in
Set font-size to 1em to prevent mobile page from zooming in when user taps on the search box

--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -498,6 +498,12 @@ th[scope="row"] {
 }
 
 @media screen and (max-width: 992px) {
+  #student-search:focus {
+    font-size: 1em !important;
+  }
+}
+
+@media screen and (max-width: 992px) {
   .open > .dropdown-menu {
     color: #9d9d9d;
   }
