--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -372,8 +372,8 @@ th[scope="row"] {
         width: 22em;
     }
     @include mobile {
-        &:focus {
-            font-size: 1em !important;
+        &:focus, &:hover {
+            font-size: 16px !important;
         }
     }
 }
