--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -372,6 +372,7 @@ th[scope="row"] {
         width: 22em;
     }
     @include mobile {
+        // Fix mobile input zoom
         &:focus, &:hover {
             font-size: 16px !important;
         }
